--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: java
 
+dist: trusty
+addons:
+  chrome: stable
+before_install:
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+
 jdk:
   - oraclejdk8
 
