--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,29 @@
-gafanhoto:
-  image: robsonbittencourt/gafanhoto
-  links:
-    - mongodb
-  environment:
-    SPRING_DATA_MONGODB_URI: mongodb://mongodb/userregistration
-    TELEGRAM_USER_ID: 
-    GAFANHOTO_TOKEN:
+version: '3'
 
-mongodb:
-  image: mongo:3.6.1
-  ports:
-    - "27017:27017"
-  volumes:
-    - ~/gafanhoto-data:/data/db
+services:
+
+  gafanhoto:
+    image: robsonbittencourt/gafanhoto
+    links:
+      - mongodb
+    environment:
+      SPRING_DATA_MONGODB_URI: mongodb://mongodb/userregistration
+      TELEGRAM_USER_ID:
+      GAFANHOTO_TOKEN:
+
+  mongodb:
+    image: mongo:3.6.1
+    ports:
+      - "27017:27017"
+    volumes:
+      - ~/gafanhoto-data:/data/db
+
+  mongo-backup:
+    image: "istepanov/mongodump:3.4"
+    volumes:
+      - ~/gafanhoto-data-backup:/backup
+    environment:
+      CRON_SCHEDULE: '0 */12 * * *'
+      MONGO_HOST: "mongodb"
+    depends_on:
+      - mongodb
